# fastapi-boilerplate

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ckc-search-app.yml  fastapi-app.yml
nginx/: default.conf
resources/: gunicorn_conf.py  prestart.sh  start-reload.sh  start.sh
src/: main.py
src/api/: views.py
src/config/: __init__.py
src/core/: __init__.py  db.py  events.py  logging.py  routes.py
src/scheduler/: __init__.py  customized_jobs.py  job_manager.py
src/service/: views.py
src/utils/: __init__.py  auth_util.py  pinyin_util.py
tests/: pinyin_test.py
