[tool.poetry]
name = "app"
version = "0.1.1"
description = ""
authors = ["Wang Lyle <lyle927@hotmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
loguru = "^0.5.3"
uvicorn = "^0.13.4"
pysolr = "^3.9.0"
gunicorn = "^20.0.4"
uvloop = "^0.15.2"
SQLAlchemy = "^1.3.23"
httptools = "^0.1.1"
pypinyin = "^0.40.0"
fastapi-utils = "^0.2.1"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
python-dotenv = "^0.15.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfEX -p pytester --strict-markers --cov=src --cov-report html"
testpaths = [
    "tests",
]
xfail_strict = true
norecursedirs = [
  "*.egg",
  ".eggs",
  "dist",
  "resources"
]

[tool.semantic_release]
version_variable = [
    "src/__init__.py:__version__",
    "pyproject.toml:version"
]
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.2"]
build-backend = "poetry.core.masonry.api"
